# surreal_test

./: Cargo.toml
src/: main.rs  test_scripts.sql  util.rs
