[package]
name = "surreal_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
surreal-simple-client = "0.2.0"
serde_json = "1.0.87"
tokio = "1.21.2"
serde = { version = "1.0", features = ["derive"] }
